# BNPL

./: README.md
server/: .editorconfig  .env.example  .gitignore  Makefile  README.md  manage.py  pyproject.toml
server/apps/api/: apps.py
server/apps/api/bg_tasks/: installment_tasks.py
server/apps/api/v1/: urls.py
server/apps/api/v1/auth/: serializers.py  urls.py
server/apps/api/v1/auth/views/: customer.py  general.py  merchant.py
server/apps/api/v1/installment/: serializers.py  urls.py
server/apps/api/v1/installment/views/: customer.py  merchant.py
server/apps/api/v1/payment/: serializers.py
server/apps/api/v1/payment_plan/: serializers.py  urls.py
server/apps/api/v1/payment_plan/views/: customer.py  merchant.py
server/apps/api/v1/user/: serializers.py  urls.py
server/apps/api/v1/user/views/: customer.py  merchant.py
server/apps/installment/: admin.py  apps.py  models.py  receivers.py
server/apps/installment/migrations/: 0001_initial.py
server/apps/payment_plan/: admin.py  apps.py  models.py  receivers.py
server/apps/payment_plan/migrations/: 0001_initial.py
server/apps/user/: admin.py  managers.py  models.py
server/apps/user/migrations/: 0001_initial.py
server/bnpl/: asgi.py  auth_backends.py  celery.py  exception_handlers.py  jwt.py  models.py  pagination.py  permissions.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
server/templates/: base.html
server/templates/emails/installments/: notification.html  over-due.html
web/: .env.example  README.md  package.json  pnpm-lock.yaml
web/app/: root.tsx  routes.ts
(+61 files in other folders)
